# Project-Brain

./: .gitignore  README.md  pyproject.toml
.brain/: current.md  decisions.md  problem.md
config/: bridge-config.example.json  project-brain.example.json
docs/: bridge-v2-verification.md  core-v3-gap-analysis.md  mcp-adapter.md  migration-bridge-v2.md  product-shell-build5-hotfix-verification.md  product-shell-build6-installation-hotfix-verification.md  product-shell-build7-cli-contract-verification.md  product-shell-build8-local-task-verification.md  product-shell-build9-plan-confirm-verification.md  product-shell-rc1-verification.md  product-shell-verification.md  product-shell.md  project-configuration.md  troubleshooting-recovery.md
scripts/: build-macos-helper.sh  build-rc-artifact.sh  render-product-shell-screenshot.sh  render-product-shell-screenshot.swift  verify-bundled-helper-local-task.py  verify-bundled-helper-onboarding.py  verify-core.sh  verify-final-app-single-instance.sh  verify-macos-launchd-lifecycle.py  verify-rc-artifact.py  verify-rc-dmg-layout.sh
tests/: helpers.py  test_acceptance.py  test_actions.py  test_claim_gate.py  test_cli.py  test_cli_contract.py  test_codex_adapter.py  test_configuration.py  test_engine.py  test_executables.py  test_forensics.py  test_git_history.py  test_github.py  test_gmail.py  test_helper_packaging.py  test_ingress.py  test_local_tasks.py  test_locking.py  test_mcp_dispatch.py  test_mcp_server.py  test_mcp_tools.py  test_migrations.py  test_process_supervision.py  test_product_shell_integration.py  test_store.py  (+12 more)
(+130 files in other folders)
