[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "project-brain-core"
version = "0.7.0"
description = "Local task control plane for Project Brain"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp==1.28.1",
]

[project.optional-dependencies]
packaging = [
  "pyinstaller==6.16.0",
]

[project.scripts]
project-brain = "project_brain.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
